added blocks-footer,newIdea and return. Data file has been created. components-GifModal(early stages),FooterMenu,SocialsMenu-modified

--- a/site/src/index.scss
+++ b/site/src/index.scss
@@ -1,15 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap');
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   color: inherit;
   font-family: inherit;
 }
-
 :root {
   --clr-pink: hsl(304, 100%, 50%);
   --clr-purple: hsl(250, 100%, 69%);
@@ -19,11 +17,13 @@
   --clr-gray--dark: hsl(248, 26%, 73%);
   --clr-black--light: hsl(248, 10%, 30%);
   --clr-white: hsl(0, 100%, 100%);
+
   --fs-display: 2rem;
   --fs-h1: 5rem;
   --fs-h2: 1.4rem;
   --fs-h3: 4rem;
   --fs-h4: 3.5rem;
+
   --fs-subtitle-1: 2.5rem;
   --fs-subtitle-2: 2rem;
   --fs-text-1: 1rem;
@@ -31,66 +31,53 @@
   --fs-link: 1.3rem;
   --fs-btn: 2rem;
   --fs-logo: 1.2rem;
+
   --fw-xl: 800;
   --fw-lg: 700;
   --fw-md: 500;
   --fw-sm: 400;
+
   --ff-primary: 'Inter', sans-serif;
+
   --z-base: 0;
   --z-behind: -1;
   --z-top: 10;
   --z-modal: 100;
+
   --spacing-xs: 0.5rem;
   --spacing-sm: 1rem;
   --spacing-md: 2rem;
   --spacing-lg: 4rem;
   --spacing-xl: 8rem;
+
   --shadow--card: -1.95349px 3.90697px 43.9535px rgba(0, 0, 0, 0.13);
 }
-
 ul {
   list-style: none;
 }
-
 a {
   text-decoration: none;
 }
-
 body {
   font-family: var(--ff-primary);
 }
-
 .nav__link {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: var(--spacing-xs);
   text-transform: capitalize;
 }
-
 .nav__link__icon--left {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
-
 .logo {
   max-inline-size: 100%;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: var(--spacing-xs);
   font-size: var(--fs-logo);
-}
 
-.logo__icon--light {
-  color: var(--clr-white);
+  &__icon--light {
+    color: var(--clr-white);
+  }
 }
-/*# sourceMappingURL=index.css.map */
