--- a/site/src/App.css
+++ b/site/src/App.css
@@ -19,18 +19,6 @@ header .header__menu__icon {
   font-size: 2rem;
 }
 
-header .logo {
-  max-inline-size: 100%;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: var(--spacing-xs);
-  font-size: var(--fs-logo);
-}
-
 header nav {
   position: absolute;
   left: 0;
@@ -99,6 +87,7 @@ header nav .nav__link.header__link {
       -ms-flex-pack: center;
           justify-content: center;
   gap: var(--spacing-xs);
+  max-inline-size: 200px;
 }
 
 .btn.btn__icon--right {
@@ -136,6 +125,7 @@ header nav .nav__link.header__link {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  width: 100%;
 }
 
 .btns-group--col {
@@ -143,9 +133,6 @@ header nav .nav__link.header__link {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: stretch;
-      -ms-flex-align: stretch;
-          align-items: stretch;
 }
 
 /*=============================================
@@ -164,33 +151,286 @@ main {
   gap: var(--spacing-md);
 }
 
-.main__icon {
-  position: absolute;
+main svg {
+  z-index: var(--z-behind);
 }
 
-.main__title {
+main svg:nth-of-type(1) {
+  top: 60%;
+  left: 4%;
+  -webkit-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+}
+
+main svg:nth-of-type(2) {
+  top: 0;
+  right: 10%;
+  -webkit-transform: rotate(10deg);
+          transform: rotate(10deg);
+}
+
+main svg:nth-of-type(3) {
+  top: 100%;
+  right: 10%;
+  -webkit-transform: rotate(8deg);
+          transform: rotate(8deg);
+}
+
+main svg:nth-of-type(4) {
+  top: 0;
+  left: 5%;
+  -webkit-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+}
+
+main svg:nth-of-type(5) {
+  top: 60%;
+  right: 4%;
+  -webkit-transform: rotate(5deg);
+          transform: rotate(5deg);
+}
+
+main .main__icon {
+  position: absolute;
+  inline-size: 15vmin;
+  block-size: 15vmin;
+}
+
+main .main__title {
   font-size: var(--fs-display);
   text-transform: capitalize;
   text-align: center;
   font-weight: var(--fw-xl);
 }
 
-.main__subtitle {
+main .main__subtitle {
   text-align: center;
   font-size: var(--fs-h2);
   color: var(--clr-gray--dark);
   font-weight: var(--fw-lg);
 }
 
-.main__subtitle span:nth-of-type(1) {
+main .main__subtitle span:nth-of-type(1) {
   color: var(--clr-purple);
 }
 
-.main__subtitle span:nth-of-type(2) {
+main .main__subtitle span:nth-of-type(2) {
   color: var(--clr-pink);
 }
 
-.main__subtitle span:nth-of-type(3) {
+main .main__subtitle span:nth-of-type(3) {
   color: var(--clr-green);
+}
+
+/*=============================================
+=            plugins cards            =
+=============================================*/
+.plugins-cards {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: var(--spacing-md);
+  place-items: center;
+  background: var(--clr-purple);
+  padding: var(--spacing-sm);
+}
+
+.plugins-cards .plugin-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: var(--spacing-sm);
+  -webkit-box-shadow: var(--shadow--card);
+          box-shadow: var(--shadow--card);
+  background: var(--clr-gray--light);
+  border-radius: 6px;
+  overflow: hidden;
+  padding-top: var(--spacing-sm);
+  max-width: 360px;
+}
+
+.plugins-cards .plugin-card__icon {
+  inline-size: 80px;
+  block-size: 80px;
+}
+
+.plugins-cards .plugin-card__title {
+  font-size: 1rem;
+}
+
+.plugins-cards .plugin-card__description {
+  text-align: center;
+  line-height: 1.4;
+  font-size: var(--fs-text-1);
+  padding-inline: var(--spacing-sm);
+}
+
+.plugins-cards .plugin-card .btns-group {
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
+  padding-inline: var(--spacing-sm);
+}
+
+.plugins-cards .plugin-card__footer {
+  background: var(--clr-green);
+  width: 100%;
+  text-align: center;
+  padding: var(--spacing-xs);
+  color: var(--clr-white);
+}
+
+/*=============================================
+=            Return section            =
+=============================================*/
+.return {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: var(--spacing-md);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding: var(--spacing-sm);
+  background: var(--clr-gray--light);
+}
+
+.return.btn {
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
+}
+
+/*=============================================
+=            new idea section            =
+=============================================*/
+.new-idea {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: var(--spacing-md);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding: var(--spacing-sm);
+}
+
+.new-idea.btn {
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
+}
+
+.new-idea__title {
+  font-size: 1rem;
+}
+
+.new-idea__subtitle {
+  font-size: 0.8rem;
+  color: var(--clr-purple);
+}
+
+.new-idea__icon {
+  inline-size: 80px;
+  block-size: 80px;
+}
+
+/*=============================================
+=            footer            =
+=============================================*/
+footer {
+  background: var(--clr-black--light);
+  padding: var(--spacing-sm);
+  display: -ms-grid;
+  display: grid;
+  gap: var(--spacing-md);
+}
+
+footer .rights {
+  font-size: 0.8rem;
+  color: var(--clr-white);
+}
+
+footer .footer__social-menu {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: var(--spacing-md);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer .footer__social-menu .nav__link {
+  position: relative;
+  isolation: isolate;
+  display: -ms-inline-grid;
+  display: inline-grid;
+      grid-template-areas: 'icon';
+  place-items: center;
+}
+
+footer .footer__social-menu .nav__link svg {
+  stroke: var(--clr-white);
+  inline-size: 24px;
+  block-size: 24px;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: icon;
+}
+
+footer .footer__social-menu .nav__link::before {
+  content: '';
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: icon;
+  inline-size: 3rem;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  background: var(--clr-black--light);
+  -webkit-filter: brightness(80%);
+          filter: brightness(80%);
+  z-index: var(--z-behind);
+}
+
+footer .footer__menu {
+  display: -ms-grid;
+  display: grid;
+  place-items: start;
+  gap: var(--spacing-sm);
+}
+
+footer .footer__menu__title {
+  text-transform: capitalize;
+  color: var(--clr-green);
+  font-size: 1rem;
+}
+
+footer .footer__menu .nav__link.footer__link {
+  color: var(--clr-white);
+  font-size: 0.8rem;
+}
+
+footer .footer__menu .nav__link svg {
+  block-size: 16px;
+  inline-size: 16px;
 }
 /*# sourceMappingURL=App.css.map */
