--- a/site/src/App.scss
+++ b/site/src/App.scss
@@ -10,13 +10,7 @@ header {
   .header__menu__icon {
     font-size: 2rem;
   }
-  .logo {
-    max-inline-size: 100%;
-    display: inline-flex;
-    align-items: center;
-    gap: var(--spacing-xs);
-    font-size: var(--fs-logo);
-  }
+
   nav {
     position: absolute;
     left: 0;
@@ -63,6 +57,7 @@ header {
   align-items: center;
   justify-content: center;
   gap: var(--spacing-xs);
+  max-inline-size: 200px;
   &.btn__icon--right {
     flex-direction: row-reverse;
   }
@@ -83,10 +78,10 @@ header {
 }
 .btns-group > .btn {
   flex: 1;
+  width: 100%;
 }
 .btns-group--col {
   flex-direction: column;
-  align-items: stretch;
 }
 
 /*=============================================
@@ -98,28 +93,212 @@ main {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-md);
+  svg {
+    z-index: var(--z-behind);
+  }
+  svg:nth-of-type(1) {
+    top: 60%;
+    left: 4%;
+    transform: rotate(-10deg);
+  }
+  svg:nth-of-type(2) {
+    top: 0;
+    right: 10%;
+    transform: rotate(10deg);
+  }
+  svg:nth-of-type(3) {
+    top: 100%;
+    right: 10%;
+    transform: rotate(8deg);
+  }
+  svg:nth-of-type(4) {
+    top: 0;
+    left: 5%;
+    transform: rotate(-10deg);
+  }
+  svg:nth-of-type(5) {
+    top: 60%;
+    right: 4%;
+    transform: rotate(5deg);
+  }
+  .main__icon {
+    position: absolute;
+    inline-size: 15vmin;
+    block-size: 15vmin;
+  }
+  .main__title {
+    font-size: var(--fs-display);
+    text-transform: capitalize;
+    text-align: center;
+    font-weight: var(--fw-xl);
+  }
+  .main__subtitle {
+    text-align: center;
+    font-size: var(--fs-h2);
+    color: var(--clr-gray--dark);
+    font-weight: var(--fw-lg);
+    span:nth-of-type(1) {
+      color: var(--clr-purple);
+    }
+    span:nth-of-type(2) {
+      color: var(--clr-pink);
+    }
+    span:nth-of-type(3) {
+      color: var(--clr-green);
+    }
+  }
 }
-.main__icon {
-  position: absolute;
+
+/*=============================================
+=            plugins cards            =
+=============================================*/
+.plugins-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: var(--spacing-md);
+  place-items: center;
+  background: var(--clr-purple);
+  padding: var(--spacing-sm);
+  .plugin-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--spacing-sm);
+    box-shadow: var(--shadow--card);
+    background: var(--clr-gray--light);
+    border-radius: 6px;
+    overflow: hidden;
+    padding-top: var(--spacing-sm);
+    max-width: 360px;
+    &__icon {
+      inline-size: 80px;
+      block-size: 80px;
+    }
+    &__title {
+      font-size: 1rem;
+    }
+    &__description {
+      text-align: center;
+      line-height: 1.4;
+      font-size: var(--fs-text-1);
+      padding-inline: var(--spacing-sm);
+    }
+    .btns-group {
+      align-self: stretch;
+      padding-inline: var(--spacing-sm);
+    }
+    &__footer {
+      background: var(--clr-green);
+      width: 100%;
+      text-align: center;
+      padding: var(--spacing-xs);
+      color: var(--clr-white);
+    }
+  }
 }
-.main__title {
-  font-size: var(--fs-display);
-  text-transform: capitalize;
+
+/*=============================================
+=            Return section            =
+=============================================*/
+.return {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-md);
+  align-items: center;
   text-align: center;
-  font-weight: var(--fw-xl);
+  padding: var(--spacing-sm);
+  background: var(--clr-gray--light);
+  &.btn {
+    align-self: stretch;
+  }
 }
-.main__subtitle {
+
+/*=============================================
+=            new idea section            =
+=============================================*/
+.new-idea {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-md);
+  align-items: center;
   text-align: center;
-  font-size: var(--fs-h2);
-  color: var(--clr-gray--dark);
-  font-weight: var(--fw-lg);
-  span:nth-of-type(1) {
+  padding: var(--spacing-sm);
+  &.btn {
+    align-self: stretch;
+  }
+  &__title {
+    font-size: 1rem;
+  }
+  &__subtitle {
+    font-size: 0.8rem;
     color: var(--clr-purple);
   }
-  span:nth-of-type(2) {
-    color: var(--clr-pink);
+  &__icon {
+    inline-size: 80px;
+    block-size: 80px;
   }
-  span:nth-of-type(3) {
-    color: var(--clr-green);
+}
+
+/*=============================================
+=            footer            =
+=============================================*/
+footer {
+  background: var(--clr-black--light);
+  padding: var(--spacing-sm);
+  display: grid;
+  gap: var(--spacing-md);
+  .rights {
+    font-size: 0.8rem;
+    color: var(--clr-white);
+  }
+  .footer__social-menu {
+    display: inline-flex;
+    gap: var(--spacing-md);
+
+    align-items: center;
+
+    .nav__link {
+      position: relative;
+      isolation: isolate;
+      display: inline-grid;
+      grid-template-areas: 'icon';
+      place-items: center;
+      svg {
+        stroke: var(--clr-white);
+        inline-size: 24px;
+        block-size: 24px;
+        grid-area: icon;
+      }
+      &::before {
+        content: '';
+        grid-area: icon;
+        inline-size: 3rem;
+        aspect-ratio: 1/1;
+        border-radius: 50%;
+        background: var(--clr-black--light);
+        filter: brightness(80%);
+        z-index: var(--z-behind);
+      }
+    }
+  }
+  .footer__menu {
+    display: grid;
+    place-items: start;
+    gap: var(--spacing-sm);
+    &__title {
+      text-transform: capitalize;
+      color: var(--clr-green);
+      font-size: 1rem;
+    }
+    .nav__link {
+      &.footer__link {
+        color: var(--clr-white);
+        font-size: 0.8rem;
+      }
+      svg {
+        block-size: 16px;
+        inline-size: 16px;
+      }
+    }
   }
 }
