--- a/site/src/App.scss
+++ b/site/src/App.scss
@@ -12,7 +12,7 @@
       @content;
     }
   }
-  @if ($breakpoint== sm) {
+  @if ($breakpoint== lg) {
     @media (min-width: 1440px) {
       @content;
     }
@@ -21,9 +21,18 @@
 
 /*----------  Container  ----------*/
 .container {
-  padding: var(--spacing-sm);
+  padding: var(--spacing-md) var(--spacing-sm);
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 1200px;
+  @include responsive-screen(sm) {
+    padding: var(--spacing-md);
+  }
+  @include responsive-screen(md) {
+    padding: var(--spacing-lg);
+  }
+  @include responsive-screen(lg) {
+    padding: var(--spacing-xl);
+  }
 }
 
 /*----------  NavLink  ----------*/
@@ -153,10 +162,15 @@
 /*----------  Header  ----------*/
 
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: var(--spacing-sm);
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
+  // padding: var(--spacing-sm);
   position: relative;
   .header__menu__icon {
     font-size: 2rem;
@@ -194,26 +208,32 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: var(--spacing-sm);
+  gap: var(--spacing-md);
   box-shadow: var(--shadow--card);
   background: var(--clr-gray--light);
   border-radius: 6px;
   overflow: hidden;
-  padding-top: var(--spacing-sm);
-  max-width: 360px;
+  padding-top: var(--spacing-md);
+
+  &__text {
+    text-align: center;
+
+    &--title {
+      font-size: var(--fs-h1);
+
+      margin-block-end: var(--spacing-sm);
+    }
+    &--description {
+      line-height: 1.4;
+      font-size: var(--fs-xs);
+      padding-inline: var(--spacing-sm);
+    }
+  }
   &__icon {
     inline-size: 80px;
     block-size: 80px;
   }
-  &__title {
-    font-size: 1rem;
-  }
-  &__description {
-    text-align: center;
-    line-height: 1.4;
-    font-size: var(--fs-xs);
-    padding-inline: var(--spacing-sm);
-  }
+
   .btns-group {
     align-self: stretch;
     padding-inline: var(--spacing-sm);
@@ -228,12 +248,57 @@ header {
 
 /*----------  PluginCards  ----------*/
 .plugins-cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: var(--spacing-md);
-  place-items: center;
   background: var(--clr-purple);
-  padding: var(--spacing-sm);
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: var(--spacing-md);
+    place-items: center;
+  }
+  &__title {
+    grid-column: 1/-1;
+    font-size: var(--fs-lg);
+    font-weight: var(--fw-lg);
+    color: var(--clr-white);
+  }
+}
+
+/*----------  SocialsMenu  ----------*/
+.footer__social-menu {
+  display: inline-flex;
+  gap: var(--spacing-sm);
+
+  align-items: center;
+
+  .nav__link {
+    position: relative;
+    isolation: isolate;
+    display: inline-grid;
+    grid-template-areas: 'icon';
+    place-items: center;
+    &:hover,
+    :focus {
+      svg {
+        stroke: var(--clr-pink);
+      }
+    }
+    svg {
+      stroke: var(--clr-white);
+      inline-size: 16px;
+      block-size: 16px;
+      grid-area: icon;
+    }
+    &::before {
+      content: '';
+      grid-area: icon;
+      inline-size: 2rem;
+      aspect-ratio: 1/1;
+      border-radius: 50%;
+      background: var(--clr-gray--very-dark);
+      filter: brightness(80%);
+      z-index: var(--z-behind);
+    }
+  }
 }
 
 /*=============================================
@@ -242,12 +307,15 @@ header {
 
 /*----------  Main  ----------*/
 
-main {
-  padding: var(--spacing-sm);
+.main {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: var(--spacing-md);
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-md);
+    padding-block-start: unset;
+  }
 
   svg:nth-of-type(1) {
     top: 60%;
@@ -274,31 +342,32 @@ main {
     right: 4%;
     transform: rotate(5deg);
   }
-  .main__icon {
+  &__icon {
     position: absolute;
     inline-size: 15vmin;
     block-size: 15vmin;
     z-index: var(--z-behind);
   }
-  .main__title {
-    font-size: var(--fs-display);
-    text-transform: capitalize;
+  &__text {
     text-align: center;
-    font-weight: var(--fw-xl);
-  }
-  .main__subtitle {
-    text-align: center;
-    font-size: var(--fs-h2);
-    color: var(--clr-gray--dark);
-    font-weight: var(--fw-lg);
-    span:nth-of-type(1) {
-      color: var(--clr-purple);
+    &--title {
+      font-size: var(--fs-display--main);
+
+      font-weight: var(--fw-xl);
     }
-    span:nth-of-type(2) {
-      color: var(--clr-pink);
-    }
-    span:nth-of-type(3) {
-      color: var(--clr-green);
+    &--subtitle {
+      font-size: var(--fs-display--subtitle);
+      color: var(--clr-gray--dark);
+      font-weight: var(--fw-lg);
+      span:nth-of-type(1) {
+        color: var(--clr-purple);
+      }
+      span:nth-of-type(2) {
+        color: var(--clr-pink);
+      }
+      span:nth-of-type(3) {
+        color: var(--clr-green);
+      }
     }
   }
 }
@@ -306,13 +375,15 @@ main {
 /*----------  Return  ----------*/
 
 .return {
-  display: flex;
-  flex-direction: column;
-  gap: var(--spacing-md);
-  align-items: center;
-  text-align: center;
-  padding: var(--spacing-sm);
   background: var(--clr-gray--light);
+  .container {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-md);
+    align-items: center;
+    text-align: center;
+  }
+
   &.btn {
     align-self: stretch;
   }
@@ -321,12 +392,14 @@ main {
 /*----------  NewIdea  ----------*/
 
 .new-idea {
-  display: flex;
-  flex-direction: column;
-  gap: var(--spacing-md);
-  align-items: center;
-  text-align: center;
-  padding: var(--spacing-sm);
+  .container {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-md);
+    align-items: center;
+    text-align: center;
+  }
+
   &.btn {
     align-self: stretch;
   }
@@ -347,48 +420,32 @@ main {
 
 footer {
   background: var(--clr-gray--very-dark);
-  padding: var(--spacing-sm);
-  display: grid;
-  gap: var(--spacing-md);
-
+  .container {
+    display: grid;
+    gap: var(--spacing-md);
+    @include responsive-screen(sm) {
+      grid-template-columns: auto 1fr;
+    }
+  }
+  .footer__info {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-sm);
+  }
   .rights {
     font-size: 0.8rem;
     color: var(--clr-white);
   }
-  .footer__social-menu {
-    display: inline-flex;
+  .footer__menus {
+    display: flex;
+    flex-wrap: wrap;
     gap: var(--spacing-md);
-
-    align-items: center;
-
-    .nav__link {
-      position: relative;
-      isolation: isolate;
-      display: inline-grid;
-      grid-template-areas: 'icon';
-      place-items: center;
-      svg {
-        stroke: var(--clr-white);
-        inline-size: 24px;
-        block-size: 24px;
-        grid-area: icon;
-      }
-      &::before {
-        content: '';
-        grid-area: icon;
-        inline-size: 3rem;
-        aspect-ratio: 1/1;
-        border-radius: 50%;
-        background: var(--clr-gray--very-dark);
-        filter: brightness(80%);
-        z-index: var(--z-behind);
-      }
-    }
   }
   .footer__menu {
-    display: grid;
-    place-items: start;
+    display: flex;
+    flex-direction: column;
     gap: var(--spacing-sm);
+
     &__title {
       text-transform: capitalize;
       color: var(--clr-green);
