--- a/site/src/index.css
+++ b/site/src/index.css
@@ -22,6 +22,11 @@ a {
   text-decoration: none;
 }
 
+h1,
+h2 {
+  text-transform: capitalize;
+}
+
 /*=============================================
 =            css variables            =
 =============================================*/
@@ -37,8 +42,8 @@ a {
   --clr-white: hsl(0, 100%, 100%);
   --fs-display--main: 2rem;
   --fs-display--subtitle: 1.5rem;
-  --fs-h1: 1.4rem;
-  --fs-h2: 1.3rem;
+  --fs-h1: 1.2rem;
+  --fs-h2: 1rem;
   --fs-xl: 1.6rem;
   --fs-lg: 1.4rem;
   --fs-md: 1.2rem;
