--- a/site/src/index.scss
+++ b/site/src/index.scss
@@ -20,6 +20,10 @@ ul {
 a {
   text-decoration: none;
 }
+h1,
+h2 {
+  text-transform: capitalize;
+}
 /*=============================================
 =            css variables            =
 =============================================*/
@@ -37,8 +41,8 @@ a {
 
   --fs-display--main: 2rem;
   --fs-display--subtitle: 1.5rem;
-  --fs-h1: 1.4rem;
-  --fs-h2: 1.3rem;
+  --fs-h1: 1.2rem;
+  --fs-h2: 1rem;
 
   --fs-xl: 1.6rem;
   --fs-lg: 1.4rem;
